ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: name
  name: prod
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: your-domain.net # Change by your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 8080
  tls:
    - hosts:
        - your-domain.net # Change by your domain
      secretName: domain-tls
