ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    app: name
  name: staging
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: your-domain.net # Change by your domain
    http:
      paths:
      - backend:
          service:
            name: app-deployemnt-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - your-domain.net # Change by your domain
    secretName: domain-tls
